--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Compositional 3D Assets Generation with Differentiable 3D Layout Alignment.">
-  <meta name="keywords" content="Compositional 3D Generatio">
+  <meta name="keywords" content="Compositional 3D Generation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment</title>
 
@@ -16,24 +16,63 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+
+  <style>
+    .superscript {
+      vertical-align: super;
+      font-size: smaller;
+    }
+    .custom-container {
+      max-width: 100%;
+      padding: 0 1.5rem;
+    }
+    .column.is-one-sixth {
+      width: 16.66%;
+      padding: 10px;
+    }
+    .custom-image {
+      width: 100%; /* Adjust width as needed */
+      height: auto; /* Maintain aspect ratio */
+      margin-top: 0.5cm; /* Move the image down by 2 centimeters */
+    }
+    .custom-paragraph-1 {
+      margin-top: 0.55cm; /* Move the paragraph down by 1 centimeter */
+    }
+    .custom-paragraph-2 {
+      font-weight: bold; /* Make the font bold */
+    }
+  </style>
 </head>
 <body>
 
 <section class="hero">
   <div class="hero-body">
-    <div class="container is-max-desktop">
+    <div class="custom-container">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment</h1>
+          <h1 class="title is-1 publication-title">REPARO: Compositional 3D Assets Generation<br> with Differentiable 3D Layout Alignment</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Anonymous</span>
+            <span class="author-block">
+              <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=vLZp870AAAAJ" target="_blank">Haonan Han<sup>1,*</sup></a></span>, 
+              <a href="https://scholar.google.co.uk/citations?user=Bi7e6bIAAAAJ&hl=zh-CN" target="_blank">Rui Yang<sup>2,*</sup></a></span>,
+              <a href="https://hannieliao.github.io/" target="_blank">Huan Liao<sup>1,*</sup></a></span>,
+              <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=E65sZH8AAAAJ" target="_blank">Jiankai Xing<sup>1</sup></a></span>,
+              <a href="https://scholar.google.co.uk/citations?user=73rbkRgAAAAJ&hl=zh-CN" target="_blank">Zunnan Xu<sup>1</sup></a></span>,<br>
+              <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=rm2mVYoAAAAJ" target="_blank">Xiaoming Yu<sup>3</sup></a></span>,
+              <a href="#" onclick="return false;">Junwei Zha<sup>3</sup></a></span>,
+              <a href="https://scholar.google.co.uk/citations?user=Xrh1OIUAAAAJ&hl=zh-CN" target="_blank">Xiu Li<sup>1,†</sup></a></span>,
+              <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=I03QnrsAAAAJ" target="_blank">Wanhua Li<sup>4,†</sup></a></span>
+            <p><span class="superscript">1</span> Tsinghua University, <span class="superscript">2</span> The University of Hong Kong</p>
+            <p><span class="superscript">3</span> Tencent Meeting, <span class="superscript">4</span> Harvard University</p>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- Placeholder for future links. -->
               <span class="link-block">
-                <span>Code (Coming soon)</span>
+                <a href="https://github.com/your-repo-link" target="_blank">Code</a>
+              </span>
+              <span class="link-block">
+                <a href="https://your-paper-link.com" target="_blank">Paper</a>
               </span>
             </div>
           </div>
@@ -43,17 +82,17 @@
   </div>
 </section>
 
+<!-- Abstract Section -->
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-          This paper presents REPARO, an innovative approach designed to address the challenges of 
-          compositional 3D assets generation from single images. Traditional image-to-3D models 
-          often struggle with scenes containing multiple objects due to biases and occlusion complexities. 
+            This paper presents REPARO, an innovative approach designed to address the challenges of 
+            compositional 3D assets generation from single images. Traditional image-to-3D models 
+            often struggle with scenes containing multiple objects due to biases and occlusion complexities. 
           </p>
           <p>
             To address this challenge, we present REPARO, a novel approach for compositional 3D asset 
@@ -74,149 +113,209 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
+  </div>
+</section>
 
-    <!-- Pipeline Module -->
-    <section class="section">
-      <div class="container is-max-desktop">
-        <div class="columns is-centered">
-          <div class="column is-four-fifths">
-            <h2 class="title is-3">Pipeline</h2>
-            <div class="publication-image">
-              <img src="./static/images/framework-1.png" alt="Pipeline Image">
-              <img src="./static/images/Pipeline1.jpg" alt="Pipeline Image">
-            </div>
-          </div>
+<!-- Pipeline Section -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Pipeline</h2>
+        <div class="publication-image">
+          <img src="./static/images/framework-1.png" alt="Pipeline Image">
+          <img src="./static/images/Pipeline1.jpg" alt="Pipeline Image">
         </div>
       </div>
-    </section>
-    <!--/ Pipeline Module -->
+    </div>
+  </div>
+</section>
 
-    <section class="section">
-      <div class="container is-max-desktop">
-    
-        <!-- Main results. -->
-        <div class="columns is-centered">
-          <div class="column is-full-width">
-            <h2 class="title is-3">Main results</h2>
-    
-            <!-- Quantitative experiment. -->
-            <h3 class="title is-4">Quantitative experiment</h3>
-            <div class="content has-text-justified">
-              <p>
-                We conducted a quantitative experiment to evaluate the performance of REPARO compared to existing methods. The results demonstrate that REPARO achieves superior accuracy and coherence in generating multi-object 3D scenes from single images.
-              </p>
-              <div class="publication-image">
-                <img src="./static/images/Quantitative_experiment.png" alt="Quantitative Experiment Results">
-              </div>
+<!-- Main Results Section -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Main results</h2>
+
+        <!-- Quantitative Experiment -->
+        <h3 class="title is-4">Quantitative experiment</h3>
+        <div class="content has-text-justified">
+          <p>
+            We conducted a quantitative experiment to evaluate the performance of REPARO compared to existing methods. The results demonstrate that REPARO achieves superior accuracy and coherence in generating multi-object 3D scenes from single images.
+          </p>
+          <div class="publication-image">
+            <img src="./static/images/Quantitative_experiment.png" alt="Quantitative Experiment Results">
+          </div>
+        </div>
+
+        <!-- Qualitative Experiment -->
+        <h3 class="title is-4">Qualitative experiment</h3>
+        <div class="content has-text-centered">
+          <!-- First row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/city_taxi/CITY_TAXI_POLICE_CAR.png" alt="Qualitative Experiment Image 1" class="custom-image">
             </div>
-            <!--/ Quantitative experiment. -->   
-
-       <!-- Qualitative experiment. -->
-       <h3 class="title is-4">Qualitative experiment</h3>
-       <div class="content has-text-centered">
-         <div class="columns is-multiline">
-          <!-- Insert your 28 GIFs below -->
-          <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/dg/CITY_TAXI_POLICE_CAR/CITY_TAXI_POLICE_CAR.gif" alt="Qualitative Experiment GIF 1">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/CITY_TAXI_POLICE_CAR/taxi.gif" alt="Qualitative Experiment GIF 2">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/CITY_TAXI_POLICE_CAR_rgba/taxi.gif" alt="Qualitative Experiment GIF 3">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/taxi/taxi.gif" alt="Qualitative Experiment GIF 4">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/city_taxi/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Second row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/CONE/CONE_SORTING_kg5fbARBwts.png" alt="Qualitative Experiment Image 2" class="custom-image">
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/CONE_SORTING_kg5fbARBwts/CONE_SORTING_kg5fbARBwts.gif" alt="Qualitative Experiment GIF 5">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/CONE_SORTING_kg5fbARBwts/cone.gif" alt="Qualitative Experiment GIF 6">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/CONE_SORTING_kg5fbARBwts_rgba/cone.gif" alt="Qualitative Experiment GIF 7">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/cone/cone.gif" alt="Qualitative Experiment GIF 8">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/CONE/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Third row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/pounding/POUNDING_MUSHROOMS.png" alt="Qualitative Experiment Image 3" class="custom-image">
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/POUNDING_MUSHROOMS/POUNDING_MUSHROOMS.gif" alt="Qualitative Experiment GIF 9">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/POUNDING_MUSHROOMS/pounding.gif" alt="Qualitative Experiment GIF 10">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/POUNDING_MUSHROOMS_rgba/pounding.gif" alt="Qualitative Experiment GIF 11">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/pounding/pounding.gif" alt="Qualitative Experiment GIF 12">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/pounding/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Fourth row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/LEGO/LEGO_Duplo_Creative_Animals_10573.png" alt="Qualitative Experiment Image 4" class="custom-image">
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/LEGO_Duplo_Creative_Animals_10573/LEGO_Duplo_Creative_Animals_10573.gif" alt="Qualitative Experiment GIF 13">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/LEGO_Duplo_Creative_Animals_10573/lego.gif" alt="Qualitative Experiment GIF 14">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/LEGO_Duplo_Creative_Animals_10573_rgba/lego.gif" alt="Qualitative Experiment GIF 15">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/lego/lego.gif" alt="Qualitative Experiment GIF 16">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/LEGO/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Fifth row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/OBJ/Object.png" alt="Qualitative Experiment Image 5" class="custom-image">
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/Object/Object.gif" alt="Qualitative Experiment GIF 17">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/Object/obj.gif" alt="Qualitative Experiment GIF 18">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/Object_rgba/obj.gif" alt="Qualitative Experiment GIF 19">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/object/obj.gif" alt="Qualitative Experiment GIF 20">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/OBJ/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Sixth row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/speed_boat/SPEED_BOAT.png" alt="Qualitative Experiment Image 6" class="custom-image">
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/SPEED_BOAT/SPEED_BOAT.gif" alt="Qualitative Experiment GIF 21">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/SPEED_BOAT/speedboat.gif" alt="Qualitative Experiment GIF 22">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/SPEED_BOAT_rgba/speedboat.gif" alt="Qualitative Experiment GIF 23">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/speedboat/speedboat.gif" alt="Qualitative Experiment GIF 24">
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/speed_boat/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+            </div>
+          </div>
+
+          <!-- Seventh row -->
+          <div class="columns">
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/tower/TOWER_TUMBLING.png" alt="Qualitative Experiment Image 7" class="custom-image">
+              <p class="custom-paragraph-1">Reference</p>
+            </div>
+            <div class="column is-2">
               <img src="./static/videos/dg/TOWER_TUMBLING/TOWER_TUMBLING.gif" alt="Qualitative Experiment GIF 25">
               <p>DreamGaussian</p>
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/lrm/TOWER_TUMBLING/tower.gif" alt="Qualitative Experiment GIF 26">
               <p>LRM</p>
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/w3/TOWER_TUMBLING_rgba/tower.gif" alt="Qualitative Experiment GIF 27">
               <p>Wonder3D</p>
             </div>
-            <div class="column is-one-quarter">
+            <div class="column is-2">
               <img src="./static/videos/reparo_7/tower/tower.gif" alt="Qualitative Experiment GIF 28">
-              <p>Reparo(ours)</p>
+              <p class="custom-paragraph-2">REPARO(ours)</p>
             </div>
-            <!-- Add more GIFs here -->
-            <!-- Example: -->
-            <!-- <div class="column is-one-quarter">
-              <img src="./static/gifs/gif3.gif" alt="Qualitative Experiment GIF 3">
-            </div> -->
+            <div class="column is-2">
+              <img src="./static/videos/demo_new/tower/000_render_our_0.gif" alt="Qualitative Experiment GIF">
+              <p class="custom-paragraph-2">Layout Alignment</p>
+            </div>
           </div>
         </div>
-        <!--/ Qualitative experiment. -->
-
       </div>
     </div>
-    <!--/ Main results. -->
+  </div>
+</section>
 
 <footer class="footer">
   <div class="container">
@@ -224,13 +323,10 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website is licensed under a <a rel="license"
-                                                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
+            This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
           <p>
-            Thanks for the excellent open-source project demo page template provided by <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a>.
+            Thanks for the excellent open-source project demo page template provided by <a href="https://github.com/nerfies/nerfies.github.io">source code</a>.
           </p>
         </div>
       </div>
