--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="https://github.com/VincentHancoder/REPARO?tab=readme-ov-file" target="_blank">Code</a>
+                <a href="https://github.com/VincentHancoder/REPARO?tab=readme-ov-file" target="_blank"><i class="fas fa-code"></i>Code</a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2405.18525" target="_blank">Paper</a>
+                <a href="https://arxiv.org/pdf/2405.18525" target="_blank"><i class="fas fa-file-pdf"></i>Paper</a>
               </span>
             </div>
           </div>
