--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="keywords" content="Compositional 3D Generation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment</title>
-
+  
   <link rel="stylesheet" href="./static/css/bulma.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="./static/images/favicon.ico">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
