--- a/index.html
+++ b/index.html
@@ -325,6 +325,22 @@
   </div>
 </section>
 
+<div class="column has-text-centered">
+  <div class="bibtex-section">
+    <h2 class="title is-4">BibTeX</h2>
+    <pre>
+@misc{han2024reparo,
+title={REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment}, 
+author={Haonan Han and Rui Yang and Huan Liao and Jiankai Xing and Zunnan Xu and Xiaoming Yu and Junwei Zha and Xiu Li and Wanhua Li},
+year={2024},
+eprint={2405.18525},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
+    </pre>
+  </div>
+</div>
+  
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
