--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         font-size: 50px;
         color: #4A90E2;
     }
+    .bibtex-section {
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
@@ -81,6 +84,9 @@
               </span>
               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2405.18525" target="_blank"><i class="fas fa-file-pdf"></i>Paper</a>
+              </span>
+              <span class="link-block">
+                <a href="#bibtex-section"><i class="fas fa-file-pdf"></i>Cite</a>
               </span>
             </div>
           </div>
@@ -325,21 +331,27 @@
   </div>
 </section>
 
-<div class="column has-text-centered">
-  <div class="bibtex-section">
-    <h2 class="title is-4">BibTeX</h2>
-    <pre>
-@misc{han2024reparo,
-title={REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment}, 
-author={Haonan Han and Rui Yang and Huan Liao and Jiankai Xing and Zunnan Xu and Xiaoming Yu and Junwei Zha and Xiu Li and Wanhua Li},
-year={2024},
-eprint={2405.18525},
-archivePrefix={arXiv},
-primaryClass={cs.CV}
-}
-    </pre>
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <div id="bibtex-section" class="column has-text-left bibtex-section">
+          <h2 class="title is-4">BibTeX</h2>
+          <pre>
+        @misc{han2024reparo,
+        title={REPARO: Compositional 3D Assets Generation with Differentiable 3D Layout Alignment}, 
+        author={Haonan Han and Rui Yang and Huan Liao and Jiankai Xing and Zunnan Xu and Xiaoming Yu and Junwei Zha and Xiu Li and Wanhua Li},
+        year={2024},
+        eprint={2405.18525},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV}
+        }
+          </pre>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
   
 <footer class="footer">
   <div class="container">
