--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h1 class="title is-1 publication-title">REPARO: Compositional 3D Assets Generation<br> with Differentiable 3D Layout Alignment</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=vLZp870AAAAJ" target="_blank">Haonan Han<sup>1,*</sup></a></span>, 
+              <a href="https://vincenthancoder.github.io/" target="_blank">Haonan Han<sup>1,*</sup></a></span>, 
               <a href="https://scholar.google.co.uk/citations?user=Bi7e6bIAAAAJ&hl=zh-CN" target="_blank">Rui Yang<sup>2,*</sup></a></span>,
               <a href="https://hannieliao.github.io/" target="_blank">Huan Liao<sup>1,*</sup></a></span>,
               <a href="https://scholar.google.co.uk/citations?hl=zh-CN&user=E65sZH8AAAAJ" target="_blank">Jiankai Xing<sup>1</sup></a></span>,
